Attempting to fix icon overflow on mobile

--- a/pelican-themes/BT3-Flat/static/css/layout.css
+++ b/pelican-themes/BT3-Flat/static/css/layout.css
@@ -591,4 +591,7 @@ footer a.toTop {
   a.icon-block:hover {
     color:#000;
   }
+  #header a.navbar-brand {
+    margin-left: -8px;
+  }
 }
